--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.12.2
 certifi==2023.7.22
 charset-normalizer==3.3.0
 contourpy==1.1.1
@@ -28,6 +29,7 @@ scikit-learn==1.3.1
 scipy==1.11.3
 seaborn==0.13.0
 six==1.16.0
+soupsieve==2.5
 threadpoolctl==3.2.0
 tokenizers==0.14.1
 tqdm==4.66.1
@@ -36,4 +38,5 @@ tzdata==2023.3
 urllib3==2.0.7
 wcwidth==0.2.8
 wordfreq==3.0.3
+xlrd==2.0.1
 zipp==3.17.0
